# api

./: .env-example  .gitignore  .python-version  README.md  deploy.sh  passenger_wsgi.py  pyproject.toml  requirements.txt  setup.cfg
app/: app.py  config.py  console.py  setup.py
app/models/: abundance_crosswalk.py  core.py  expedition.py  field.py  hole.py  pagination.py  sample.py  sample_field.py  sample_taxon.py  section.py  site.py  taxon.py  taxon_crosswalk.py
app/resources/: api_home.py  core.py  expedition.py  hole.py  home.py  sample.py  section.py  site.py  taxon.py
app/schemas/: core.py  expedition.py  hole.py  sample.py  sample_taxon.py  section.py  site.py  taxon.py
app/scripts/: db.py  foo.py  import_expeditions.py  import_lithology_csv.py  import_micropal_csv.py  import_normalized_fields.py  import_normalized_taxa.py  pbdb_taxa.py  update_database_records.py
app/templates/: home.html
app/tests/: conftest.py  factories.py
eodp_api/: config_base.py
migrations/versions/: 0fcf4cc40b4b_add_more_comments_fields_to_taxa_.py  123616f16978_remove_taxa_verbatim_name.py  12ab4670015f_create_eodp_tables.py  1b84a49aa4e2_add_sitemodel.py  1e278257f346_make_name_nullable.py  223059b78151_add_dataset_column_to_tables.py  24bc88e66a5b_create_taxa_crosswalk.py  2ac96cb22a98_add_taxon_group_to_taxon.py  3a1e01f96c2c_add_data_source.py  3f4b6b4b8076_remove_additional_species_comments_from_.py  49966223fbab_change_to_verbatim_name.py  5a8de34b1085_move_aw_to_section.py  5c622754ebac_fix_holes_model.py  (+24 more)
scripts/: code_style.py  linter.py
tests/: test_truthy.py
(+16 files in other folders)
