[tool.poetry]
name = "eodp-api"
version = "0.1.0"
description = "API for eODP."
authors = ["wykhuh <wykhuh@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "3.6.8"
Flask = "^1.1.2"
Flask-RESTful = "^0.3.8"
Flask-SQLAlchemy = "^2.4.1"
marshmallow = "^3.5.1"
python-dotenv = "^0.12.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7.9"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
lint = "scripts.code_style:lint"
start = "scripts.code_style:start_app"
